--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   dio: ^4.0.6
   package_info_plus: ^3.0.1
   url_launcher: ^6.1.5
+  flutter_svg: ^1.1.6
+  fl_chart: ^0.55.2
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
