--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,9 @@ dependencies:
   package_info_plus: ^3.0.1
   url_launcher: ^6.1.5
   flutter_svg: ^1.1.6
-  fl_chart: ^0.55.2
+ 
   readmore: ^2.2.0
+  syncfusion_flutter_charts: ^20.3.56
 
 dev_dependencies:
   flutter_test:
