Login and institutional Login api integration and ui changes in exam

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
  
   readmore: ^2.2.0
   syncfusion_flutter_charts: ^20.3.56
+  auto_size_text: ^3.0.0
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
