home_screen, library integration done and fixed bug in login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,12 @@ dependencies:
   package_info_plus: ^3.0.1
   url_launcher: ^6.1.5
   flutter_svg: ^1.1.6
- 
+  
   readmore: ^2.2.0
   syncfusion_flutter_charts: ^20.3.56
   auto_size_text: ^3.0.0
   device_info_plus: ^8.0.0
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
