--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   auto_size_text: ^3.0.0
   device_info_plus: ^8.0.0
   carousel_slider: ^4.1.1
+  calendar_date_picker2: ^0.3.1
 
 dev_dependencies:
   flutter_test:
