--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   carousel_slider: ^4.1.1
   calendar_date_picker2: ^0.3.1
   flutter_titled_container: ^1.0.7
+  data_tables: ^1.4.0
 
 dev_dependencies:
   flutter_test:
