--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   video_player: ^2.4.8
   flutter_titled_container: ^1.0.7
   data_tables: ^1.4.0
+  dropdown_button2: ^1.9.1
 
 dev_dependencies:
   flutter_test:
