--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   sms_autofill: ^2.2.0
   google_fonts: ^3.0.1
   dio: ^4.0.6
-  package_info_plus: ^3.0.1
+  package_info_plus: ^1.3.0
   url_launcher: ^6.1.5
   flutter_svg: ^1.1.6
 
@@ -60,6 +60,7 @@ dependencies:
   dropdown_button2: ^1.9.1
   file_picker: ^5.2.2
   image_picker: ^0.8.6
+  razorpay_flutter: ^1.3.4
 
 dev_dependencies:
   flutter_test:
