--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   file_picker: ^5.2.2
   image_picker: ^0.8.6
   razorpay_flutter: ^1.3.4
+  
+  pinput: ^2.2.16
 
 dev_dependencies:
   flutter_test:
