--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   file_picker: ^5.2.2
   image_picker: ^0.8.6
   razorpay_flutter: ^1.3.4
-  
+  dotted_border: ^2.0.0+3
   pinput: ^2.2.16
 
 dev_dependencies:
