--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   razorpay_flutter: ^1.3.4
   dotted_border: ^2.0.0+3
   pinput: ^2.2.16
+  salomon_bottom_bar: ^3.3.1
 
 dev_dependencies:
   flutter_test:
