--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   salomon_bottom_bar: ^3.3.1
   syncfusion_flutter_gauges: ^20.3.61
 
+  gallery_saver: ^2.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
