Animated Progress added in all category and dashboard fee ui added and school detail added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   dotted_line: ^3.1.0
 
   gallery_saver: ^2.3.2
+  lottie: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +95,7 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
