--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   razorpay_flutter: ^1.3.4
   dotted_border: ^2.0.0+3
   pinput: ^2.2.16
-  syncfusion_flutter_pdf: ^20.3.61
+  #syncfusion_flutter_pdf: ^20.3.61
   salomon_bottom_bar: ^3.3.1
   syncfusion_flutter_gauges: ^20.3.61
   dotted_line: ^3.1.0
@@ -70,7 +70,7 @@ dependencies:
   gallery_saver: ^2.3.2
   lottie: ^2.1.0
   timeago: ^3.3.0
-
+  pdf: ^3.8.4
 
 dev_dependencies:
   flutter_test:
