Coe Api Added , Salary details Api integrated and fixed performance issue on bday

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   timeago: ^3.3.0
   pdf: ^3.8.4
   document_file_save_plus: ^1.0.9
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
