firebase bug fix

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,5 +104,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'com.google.android.gms:play-services-auth-api-phone:18.0.1'
     implementation files('libs\\peb-lib-android-x.aar')
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
