--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   number_to_words_english: ^2.0.2
   firebase_messaging: ^14.2.2
   firebase_core: ^2.5.0
+  flutter_local_notifications: ^13.0.0
 
 
 dev_dependencies:
