--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,11 +79,11 @@ dependencies:
   firebase_core: ^2.5.0
   flutter_local_notifications: ^13.0.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.11.0"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -133,3 +133,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  adaptive_icon_background: "#621990"
+  image_path: "assets/images/app_icon.png"
+  min_sdk_android: 20 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    background_color: "#621990"
+    theme_color: "#621990"
+  windows:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/app_icon.png"
