--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   data_tables: ^1.4.0
   dropdown_button2: ^1.9.1
   file_picker: ^5.2.2
-  image_picker: ^0.8.6
+  image_picker: ^0.8.6+3
   razorpay_flutter: ^1.3.4
   dotted_border: ^2.0.0+3
   pinput: ^2.2.16
