--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,11 +135,11 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   adaptive_icon_background: "#621990"
   image_path: "assets/images/app_icon.png"
-  min_sdk_android: 20 # android min sdk min:16, default 21
+  # min_sdk_android: 20 # android min sdk min:16, default 21
   web:
     generate: true
     image_path: "assets/images/app_icon.png"
