--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 	<dict>
 		<key>CLIENT_ID</key>
-		<string>542163507398-n5ulbbn5nre9nb5khv6fmblemnbmouqo.apps.googleusercontent.com</string>
+		<string>542163507398-h8ia15g8pe93rs4pn3v63aqgigs5u72m.apps.googleusercontent.com</string>
 		<key>REVERSED_CLIENT_ID</key>
-		<string>com.googleusercontent.apps.542163507398-n5ulbbn5nre9nb5khv6fmblemnbmouqo</string>
+		<string>com.googleusercontent.apps.542163507398-h8ia15g8pe93rs4pn3v63aqgigs5u72m</string>
 		<key>API_KEY</key>
 		<string>AIzaSyBUN8yDXrIGXde2vBwEzXNCH4YITy1Z9cY</string>
 		<key>GCM_SENDER_ID</key>
@@ -13,22 +13,22 @@
 		<key>PLIST_VERSION</key>
 		<string>1</string>
 		<key>BUNDLE_ID</key>
-		<string>com.app.mskool</string>
+		<string>com.st.jamesschool.app</string>
 		<key>PROJECT_ID</key>
 		<string>mskool-6b32d</string>
 		<key>STORAGE_BUCKET</key>
 		<string>mskool-6b32d.appspot.com</string>
 		<key>IS_ADS_ENABLED</key>
-		<false/>
+		<false></false>
 		<key>IS_ANALYTICS_ENABLED</key>
-		<false/>
+		<false></false>
 		<key>IS_APPINVITE_ENABLED</key>
-		<true/>
+		<true></true>
 		<key>IS_GCM_ENABLED</key>
-		<true/>
+		<true></true>
 		<key>IS_SIGNIN_ENABLED</key>
-		<true/>
+		<true></true>
 		<key>GOOGLE_APP_ID</key>
-		<string>1:542163507398:ios:c6fd95b369bb874ff69fc7</string>
+		<string>1:542163507398:ios:56a09e0daf016301f69fc7</string>
 	</dict>
 </plist>
