--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: "^0.11.0"
+  change_app_package_name: ^1.1.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -138,17 +139,17 @@ flutter_icons:
   android: true
   ios: true
   adaptive_icon_background: "#621990"
-  image_path: "assets/images/app_icon.png"
+  image_path: "assets/images/BGHS.png"
   # min_sdk_android: 20 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/app_icon.png"
+    image_path: "assets/images/BGHS.png"
     background_color: "#621990"
     theme_color: "#621990"
   windows:
     generate: true
-    image_path: "assets/images/app_icon.png"
+    image_path: "assets/images/BGHS.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/images/app_icon.png"
+    image_path: "assets/images/BGHS.png"
