Bcehs new release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -139,16 +139,16 @@ flutter_icons:
   android: true
   ios: true
   adaptive_icon_background: "#621990"
-  image_path: "assets/images/BBHS.png"
+  image_path: "assets/images/bcehs.jpg"
   # min_sdk_android: 20 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/BBHS.png"
+    image_path: "assets/images/bcehs.jpg"
     background_color: "#621990"
     theme_color: "#621990"
   windows:
     generate: true
-    image_path: "assets/images/BBHS.png"
+    image_path: "assets/images/bcehs.jpg"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
